@@ -1,3 +1,16 @@
-# ...
+# Eclipse
 
-...
+You must follow this tutorial 
+[official tutorial](https://openjfx.io/openjfx-docs/#IDE-Eclipse).
+
+Please complete / edit this page is you want to add some notes
+to help others.
+
+Some notes
+
+* ``type`` **fx** in the search bar to open a menu
+to add SceneBuilder path and JavaFX SDK path
+* to start a JavaFX application, add
+into your configuration (in **VM** arguments)
+``--module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml``
+with the **correct** ``/path/to/javafx/lib``.
